--- a/html/index.html
+++ b/html/index.html
@@ -44,8 +44,8 @@
                 <button type="submit" id="submit">Submit</button>
 
                 <section id="conditions">
-                    <span>Privacy Policy</span>
-                    <span>Terms & conditions</span>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Terms & Conditions</a>
                 </section>
 
 
